# stock-analysis-app

./: .dockerignore  .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/api/: Dockerfile
backend/api/app/: factory.py
backend/api/app/core/: config.py  exceptions.py  logging.py
backend/api/app/db/: base.py  models.py  session.py
backend/api/app/middleware/: request_context.py  security_headers.py
backend/api/app/shared/: errors.py
backend/batch/: Dockerfile  __init__.py
backend/batch/app/: __init__.py  __main__.py  bootstrap.py  cli.py
backend/batch/app/jobs/: compute_scores.py  nightly_pipeline.py
backend/batch/app/repositories/: __init__.py  financial_ingestion_repository.py
backend/batch/app/scheduler/: __init__.py  local.py
backend/batch/app/services/: __init__.py  financial_ingestion_service.py  score_service.py
backend/core/: __init__.py
backend/core/ai/: __init__.py  narratives.py
backend/core/providers/: __init__.py
backend/core/providers/financial/: __init__.py  base.py  dtos.py  enums.py  errors.py  factory.py  models.py  null_provider.py  registry.py  yahoo_finance_provider.py
backend/core/scoring/: __init__.py  recommendation.py  score_dto.py  score_engine.py  score_rules.py  score_weights.py
backend/db/: alembic.ini
backend/db/migrations/: env.py
backend/db/migrations/versions/: 20260519_0001_initial_schema.py  20260519_0001_initial_schema.sql  (+2 more)
backend/db/seeds/: dev_stocks.sql
backend/scripts/: update_stocks.py
(+84 files in other folders)
